# Transformers-LLMs-RAG-and-Agents

./: README.md
agents-playground/zubin-forum-agent/: .env.example  .gitignore  README.md  approval.py  config.py  evaluation.py  zubin_forum_agent.py  zubin_state.example.json
agents-playground/zubin-forum-agent/evaluations/: 2026-07-04_23-20-17.md  2026-07-04_23-22-03.md  2026-07-05_13-18-35.md
agents-playground/zubin-forum-agent/knowledge/: rules.md
agents-playground/zubin-forum-agent/orchestra/: __init__.py  analysis.py  critic.py  knowledge_loader.py  mies.py  musician.py  prompt_loader.py  rams.py  rice.py  turing.py  zubin.py
agents-playground/zubin-forum-agent/prompts/: critic.md  mies.md  orchestra.md  rams.md  rice.md  turing.md  zubin.md
agents-playground/zubin-forum-agent/providers/: __init__.py  openai_provider.py
agents-playground/zubin-forum-agent/tools/: __init__.py  moodle.py
context-explorer/: README.md  context_explorer.py  pyproject.toml
function-calling/: README.md  pyproject.toml  three_pigs_function_calling.py
week-01/demos/02-context-explorer/: pyproject.toml
week-01/demos/the-api-call/: README.md
week-01/ex-01-tokenise/: ex_01_tokenise.py
week-01/ex-04-call-the-llm/: README.md  call.py  call.sh  responses_openai.py
week-01/ex-05-easy-chatgpt/: .env.example  README.md  docker-compose.yml
week-01/ex-05-easy-chatgpt/backend/: Dockerfile
week-01/ex-05-easy-chatgpt/frontend/: app.js  index.html  styles.css
week-02/collections-manager/: .gitignore  README.md  pyproject.toml
week-02/collections-manager/collections_manager/: __init__.py
week-02/demos/01-single-file-rag/: .env.example  (+2 more)
week-02/demos/05-simple-embeddings-rag/: README.md  pyproject.toml  simple_embeddings_rag.py
week-02/demos/context-explorer-dynamic-rag/: README.md  pyproject.toml
week-02/demos/rag-graph-expansion/: .env.example  README.md  pyproject.toml  rag_graph_expansion.py
week-02/ex-01-easy-assistant/: .env.example  .gitignore  README.md  docker-compose.yml
(+63 files in other folders)
