[project]
name = "collections-manager"
version = "0.1.0"
description = "The simplest possible embeddings-database manager: create_collection / insert / query, on ChromaDB"
license = "CC-BY-NC-SA-4.0"
requires-python = ">=3.10"
dependencies = [
    "chromadb==1.5.9",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["collections_manager"]
