[project]
name = "simple-embeddings-rag"
version = "0.1.0"
description = "Simple embeddings RAG — the whole pipeline in one file, through the collections-manager: chunk, insert, query, inject"
license = "CC-BY-NC-SA-4.0"
requires-python = ">=3.10"
dependencies = [
    "collections-manager",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
]

[tool.uv.sources]
collections-manager = { path = "../../collections-manager", editable = true }
