[project]
name = "context-explorer-dynamic-rag"
version = "0.1.0"
description = "Context Explorer, dynamic edition: watch retrieval choose the context — query, top-K, threshold, injection, and what persists"
license = "CC-BY-NC-SA-4.0"
requires-python = ">=3.10"
dependencies = [
    "collections-manager",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0",
]

[tool.uv.sources]
collections-manager = { path = "../../collections-manager", editable = true }
