[project]
name = "rag-graph-expansion"
version = "0.1.0"
description = "Graph expansion + Reciprocal Rank Fusion — retrieve by connection when similarity isn't enough (Week 2.4)"
license = "CC-BY-NC-SA-4.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
]
